--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -90,7 +90,7 @@
     </nav>
 
     <div class="text-right">
-        <a class="btn btn-primary" href="#" th:href="@{/board/form(bulletin_id=1)}" role="button">글쓰기</a>
+        <a class="btn btn-primary" href="#" th:href="@{/board/form(bulletin_id=${param.bulletin_id})}" role="button">글쓰기</a>
     </div>
 </main>
 </body>
