--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body th:with="currentPage = 'ADMIN_HOME'">
+<body th:with="currentPage = 'ADMIN'">
     <main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h1 class="h2">Admin</h1>
