--- a/src/main/resources/templates/bulletin/bulletinForm.html
+++ b/src/main/resources/templates/bulletin/bulletinForm.html
@@ -33,14 +33,6 @@
     <form th:action="@{/bulletin/form}" th:object="${bulletin}" method="POST">
         <input type="hidden" th:field="*{id}">
         <div class="form-group">
-            <label for="boardTitle" class="form-label">게시판제목</label>
-            <input type="text" class="form-control" id="boardTitle" th:field="*{title}"
-                   th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" v-model="param.title">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
-                Looks good!
-            </div>
-        </div>
-        <div class="form-group">
             <label for="boardTypeCode" class="form-label">게시판유형</label>
             <input type="text" class="form-control" id="boardTypeCode" th:field="*{type}"
                    th:classappend="${#fields.hasErrors('type')} ? 'is-invalid'" v-model="param.type">
@@ -48,10 +40,18 @@
                 Looks good!
             </div>
         </div>
+        <div class="form-group">
+            <label for="boardTitle" class="form-label">게시판제목</label>
+            <input type="text" class="form-control" id="boardTitle" th:field="*{title}"
+                   th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" v-model="param.title">
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+                Looks good!
+            </div>
+        </div>
 
         <div class="text-right">
             <a class="btn btn-light" href="#" th:href="@{/bulletin/list}" role="button">취소</a>
-            <button type="submit" class="btn btn-primary" @click.prevent="formSubmit">확인</button>
+            <button type="submit" class="btn btn-primary">확인</button>
         </div>
     </form>
 </main>
