--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top shadow" th:fragment="headerFragment">
-        <a class="navbar-brand" href="#" th:href="@{/}">HAMS</a>
+        <a class="navbar-brand" href="#" th:href="@{/}">Huneth</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,18 +34,18 @@
                 <li class="nav-item" th:classappend="${currentPage == 'NOTICE'} ? 'active'">
                     <a class="nav-link" href="#" th:href="@{/board/list(bulletin_id=1)}">공지사항</a>
                 </li>
-                <!--<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
                     <a class="nav-link" href="#" th:href="@{/admin}">관리자</a>
-                </li>-->
-                <li class="nav-item" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
-                    <a class="nav-link" href="#" th:href="@{/admin/}">관리자</a>
                 </li>
+                <!--<li class="nav-item" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
+                    <a class="nav-link" href="#" th:href="@{/admin/}">관리자</a>
+                </li>-->
             </ul>
-            <ul class="navbar-nav px-3" sec:authorize="!isAuthenticated()">
-                <li class="nav-item text-nowrap">
+            <ul class="navbar-nav ml-auto" sec:authorize="!isAuthenticated()">
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
-                <li class="nav-item text-nowrap" th:classappend="${currentPage == 'JOIN'} ? 'active'">
+                <li class="nav-item" th:classappend="${currentPage == 'JOIN'} ? 'active'">
                     <a class="nav-link" th:href="@{/join}">Join</a>
                 </li>
             </ul>
@@ -61,6 +61,5 @@
             </form>
         </div>
     </nav>
-
 </body>
 </html>
