--- a/src/main/resources/templates/layouts/content_layout.html
+++ b/src/main/resources/templates/layouts/content_layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ko"
       xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <th:block layout:replace="~{fragments/common :: commonFragment}"></th:block>
-    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">HAMS</title>
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Huneth</title>
 </head>
 <body>
     <!--/*
@@ -12,6 +12,5 @@
         현재 layout을 사용하는 content fragment의 내용을 삽입한다.
     */-->
     <th:block layout:fragment="content"></th:block>
-
 </body>
 </html>
