--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ko"
       xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <th:block layout:replace="~{fragments/common :: commonFragment}"></th:block>
-    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">HAMS</title>
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Huneth</title>
     <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
