--- a/src/main/resources/templates/fragments/adminNav.html
+++ b/src/main/resources/templates/fragments/adminNav.html
@@ -12,18 +12,24 @@
         <div class="sidebar-sticky">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">
-                        <span data-feather="home"></span>
-                        Dashboard <span class="sr-only">(current)</span>
+                    <a class="nav-link active" th:href="@{/admin/menu}">
+                        <i class="fas fa-bars"></i>
+                        메뉴관리 <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <span data-feather="file"></span>
-                        Orders
+                    <a class="nav-link" th:href="@{/admin/calendar}">
+                        <i class="far fa-calendar-alt"></i>
+                        일정관리
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/calendar}">
+                        <i class="fas fa-clipboard-list"></i>
+                        게시판관리
+                    </a>
+                </li>
+                <!--<li class="nav-item">
                     <a class="nav-link" href="#">
                         <span data-feather="shopping-cart"></span>
                         Products
@@ -46,7 +52,7 @@
                         <span data-feather="layers"></span>
                         Integrations
                     </a>
-                </li>
+                </li>-->
             </ul>
 
             <h6
