--- a/src/main/resources/templates/layouts/admin_layout.html
+++ b/src/main/resources/templates/layouts/admin_layout.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--/* header fragment 사용 */-->
-    <th:block th:replace="fragments/header :: headerFragment"></th:block>
+    <th:block th:replace="fragments/header :: headerFragment('ADMIN')"></th:block>
 
     <!--/*
         content fragment 사용
