--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -10,9 +10,9 @@
 
     <form class="form-signin" th:action="@{/login}" method="post" id="loginForm">
         <div class="text-center mb-4">
-            <h1 class="h2 py-3 fw-normal"><a th:href="@{/}" class="nav-link">HAMS</a></h1>
-            <h2 class="h3 mb-3 font-weight-normal">Sign in to HAMS</h2>
-            <!--<p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/css-placeholder-shown">Works in latest Chrome, Safari, Firefox, and IE 10/11 (prefixed).</a></p>-->
+            <h1 class="h2 py-3 fw-normal"><a th:href="@{/}" class="nav-link">Huneth</a></h1>
+            <h2 class="h3 mb-3 font-weight-normal">로그인 해주세요</h2>
+            <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/css-placeholder-shown">Works in latest Chrome, Safari, Firefox, and IE 10/11 (prefixed).</a></p>
 
             <div th:if="${param.error}" class="alert alert-danger" role="alert">
                 <span th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></span>
