--- a/src/main/resources/templates/admin/calendar.html
+++ b/src/main/resources/templates/admin/calendar.html
@@ -22,7 +22,9 @@
         </div>
     </div>
 
-    <div id='calendar'></div>
+    <div class="container-fluid">
+        <div id='calendar'></div>
+    </div>
 </main>
 
 <th:block layout:fragment="script">
