--- a/src/main/resources/templates/fragments/adminNav.html
+++ b/src/main/resources/templates/fragments/adminNav.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/calendar}">
+                    <a class="nav-link" th:href="@{/admin/bulletin/list}">
                         <i class="fas fa-clipboard-list"></i>
                         게시판관리
                     </a>
