--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -82,7 +82,7 @@
                         success: function(data, textStatus, jqXhr){
                             console.log(data);
                             console.log(textStatus);
-                            console.log(jgXhr);
+                            console.log(jqXhr);
                         },
                         error:function(xhr,status,error){
                             console.log(xhr)
