--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -38,6 +38,8 @@
         </div>
     </main>
 
+    <div class="container-fluid"></div>
+
     <th:block layout:fragment="script">
         <script th:inline="javascript" type="text/javascript">
         </script>
