--- a/src/main/resources/templates/layouts/admin_layout.html
+++ b/src/main/resources/templates/layouts/admin_layout.html
@@ -6,6 +6,12 @@
     <th:block layout:replace="~{fragments/common :: commonFragment}"></th:block>
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Huneth</title>
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.5.1/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.5.1/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.5.1/locales-all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 </head>
 <body>
     <!--/* header fragment 사용 */-->
