--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -14,7 +14,7 @@
             <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
         </div>
 
-        <form th:action="@{/join}" method="post" th:object="${user}">
+        <form th:action="@{/join}" method="post" th:object="${userDto}">
             <h4 class="mb-3">기본정보</h4>
             <div class="form-group">
                 <label for="username">사용자 아이디</label>
@@ -35,9 +35,10 @@
             </div>
 
             <div class="form-group">
-                <label for="confirmPassword">비밀번호 확인</label>
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="비밀번호를 다시 입력해 주세요">
-                <div class="invalid-feedback">
+                <label for="passwordChk">비밀번호 확인</label>
+                <input type="password" class="form-control" id="passwordChk" placeholder="비밀번호를 다시 입력해 주세요"
+                       th:classappend="${#fields.hasErrors('passwordChk')} ? 'is-invalid'" th:field="*{passwordChk}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('passwordChk')}" th:errors="*{passwordChk}">
                     비밀번호 확인을 해야 합니다.
                 </div>
             </div>
@@ -75,17 +76,17 @@
 
             <div class="form-group">
                 <label for="affiliation">소속</label>
-                <input type="text" class="form-control" id="affiliation" name="affiliation" placeholder="소속">
+                <input type="text" class="form-control" id="affiliation" name="affiliation" placeholder="소속" th:field="*{affiliation}">
             </div>
 
             <div class="form-group">
                 <label for="licenseNumber">면허번호</label>
-                <input type="text" class="form-control" id="licenseNumber" name="licenseNumber" placeholder="면허번호">
+                <input type="text" class="form-control" id="licenseNumber" name="licenseNumber" placeholder="면허번호" th:field="*{licenseNumber}">
             </div>
 
             <div class="form-group">
                 <label for="occupation">직업</label>
-                <input type="text" class="form-control" id="occupation" name="occupation" placeholder="직업">
+                <input type="text" class="form-control" id="occupation" name="occupation" placeholder="직업" th:field="*{occupation}">
             </div>
 
             <div class="form-group form-check">
